<resources>
    <string name="app_name">Culttrip</string>
    <string name="un_expected_error">Un Expected Error</string>
    <string name="offers_notification_channel">Offers</string>
    <string name="offers_notification_channel_des">Show Offers For Each User</string>
    <string name="offers_notification_channel_id">NotificationID</string>
    <string name="welcome_des">A simple, secure and stable service for culture activities to connect you with all features about culture</string>
    <string name="continue_btn">Continue</string>
    <string name="powered_by_welcome">This Application Powered By [Vortex-io]</string>
    <string name="welcome_login">Welcome Back,</string>
    <string name="sign_in_to_countinue">Sign in to countinue</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="new_user">New User ?</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email_required">Email Required</string>
    <string name="pass_required">Password Required</string>
    <string name="login_success">Welcome Back, To Culttrip Client</string>
    <string name="account_disabled">Sorry You\'r Account Disabled</string>
    <string name="reg_des">Welcome To Culttrip Client Fill Information To Create New Account</string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>
    <string name="pin_code">Account Pin Code</string>
    <string name="register">Register</string>
    <string name="register_welcome">Welcome To Culttrip Client</string>
    <string name="location_name">Location Name</string>
</resources>
